<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>mqtt_client</name>
  <version>1.0.0</version>
  <description>Provides a nodelet that enables connected ROS-based devices or robots to exchange ROS messages via an MQTT broker using the MQTT protocol.</description>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>
  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="christian.wende@rwth-aachen.de">Christian Wende</author>
  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>
  <maintainer email="bastian.lampe@rwth-aachen.de">Bastian Lampe</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/ika-rwth-aachen/mqtt_client</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>paho-mqtt-cpp</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>topic_tools</build_depend> -->
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>topic_tools</exec_depend> -->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
<!--
  <export>
    <build_type>ament_cmake</build_type>
  </export>
-->
</package>
