<?xml version="1.0"?>
<package format="3">

  <name>mqtt_client</name>
  <version>2.2.1</version>
  <description>Node that enables connected ROS-based devices or robots to exchange ROS messages via an MQTT broker using the MQTT protocol.</description>

  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>
  <maintainer email="bastian.lampe@rwth-aachen.de">Bastian Lampe</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/mqtt_client</url>
  <url type="repository">https://github.com/ika-rwth-aachen/mqtt_client</url>

  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>
  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="christian.wende@rwth-aachen.de">Christian Wende</author>

  <depend>mqtt_client_interfaces</depend>
  <depend>ros_environment</depend>
  <depend>std_msgs</depend>

  <!-- ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">fmt</depend>
  <depend condition="$ROS_VERSION == 2">libpaho-mqtt-dev</depend>
  <depend condition="$ROS_VERSION == 2">libpaho-mqttpp-dev</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>
  <depend condition="$ROS_VERSION == 2">rcpputils</depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">nodelet</depend>
  <depend condition="$ROS_VERSION == 1">paho-mqtt-cpp</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rosfmt</depend>
  <depend condition="$ROS_VERSION == 1">topic_tools</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <nodelet condition="$ROS_VERSION == 1" plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
