<?xml version="1.0"?>
<package format="3">

  <name>mqtt_client</name>
  <version>2.3.0</version>
  <description>Node that enables connected ROS-based devices or robots to exchange ROS messages via an MQTT broker using the MQTT protocol.</description>

  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>
  <maintainer email="bastian.lampe@rwth-aachen.de">Bastian Lampe</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/mqtt_client</url>
  <url type="repository">https://github.com/ika-rwth-aachen/mqtt_client</url>

  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>
  <author email="bastian.lampe@rwth-aachen.de">Bastian Lampe</author>
  <author email="christian.wende@rwth-aachen.de">Christian Wende</author>

  <depend>fmt</depend>
  <depend>mqtt_client_interfaces</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libpaho-mqtt-dev</depend>
  <depend>libpaho-mqttpp-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcpputils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
