<?xml version="1.0"?>
<package format="3">

  <name>mqtt_client_interfaces</name>
  <version>2.4.1</version>
  <description>Message and service definitions for mqtt_client</description>

  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/mqtt_client</url>
  <url type="repository">https://github.com/ika-rwth-aachen/mqtt_client</url>

  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>